--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -12,22 +12,50 @@
             font-size: 45px;
             font-weight: 600;
             box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
+
+            @media (max-width: 768px) {
+                font-size: 38px;
+            }
             
             h1 {
                 text-align: center;
                 vertical-align: middle;
                 line-height: 150px;
+
+                @media (max-width: 1024px) {
+                    line-height: 90px;
+                }
             }
         }
 
         &List {
-            width: 80%;
-            height: 90%;
-            overflow: auto;
+            width: 90%;
+            height: 95%;
+            overflow: auto;      
             align-self: center;
             justify-self: center;
             display: flex;
             flex-flow: row wrap;
+            gap: 30px;
+            padding-bottom: 10px;
+
+            &::-webkit-scrollbar {
+                width: 10px;
+            }
+        
+            &::-webkit-scrollbar-track {
+                background-color: rgba(128, 128, 128, 0.4);
+                border-radius: 100px;
+            }
+        
+            &::-webkit-scrollbar-thumb {
+                border-radius: 20px;
+                background-color: rgba(128, 128, 128, 0.6);
+            }
+
+            @media (max-width: 520px) {
+                gap: 20px;
+            }
         }
 
         &Add {
@@ -47,6 +75,11 @@
                 color: white;
                 background-color: #40b844;
                 border: none;
+
+                @media (max-width: 1024px) {
+                    width: 200px;
+                    font-size: 22px;
+                }
 
                 &:hover {
                     background-color: #4caf4fc3;
